--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,72 @@
 ---
-
+import "../styles/global.css";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>English with Izabela</title>
+  </head>
+
+  <body>
+    <div class="relative isolate px-6 pt-14 lg:px-8">
+      <div
+        class="absolute inset-0 bg-gradient-to-br from-slate-950 via-slate-800 to-red-800 -z-10"
+      >
+      </div>
+      <img
+        src="https://images.unsplash.com/photo-1638153867870-daadae81acb5?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt=""
+        class="absolute inset-0 h-full w-full object-cover -z-10 opacity-10"
+      />
+
+      <div
+        aria-hidden="true"
+        class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80"
+      >
+        <div
+          style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"
+          class="relative left-[calc(50%-11rem)] aspect-1155/678 w-144.5 -translate-x-1/2 rotate-30 bg-linear-to-tr from-red-700 to-blue-900 opacity-50 sm:left-[calc(50%-30rem)] sm:w-288.75"
+        >
+        </div>
+      </div>
+
+      <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
+        <div class="hidden sm:mb-8 sm:flex sm:justify-center">
+          <p
+            class="relative rounded-full px-3 py-1 text-sm/6 text-gray-400 ring-1 ring-white/10 hover:ring-white/20"
+          >
+            🇬🇧 Angielski w najlepszym wydaniu - Twój angielski, Twoje tempo
+          </p>
+        </div>
+        <div class="text-center">
+          <h1
+            class="text-5xl font-semibold tracking-tight text-balance text-white sm:text-6xl"
+          >
+            English with Izabela
+          </h1>
+          <p
+            class="mt-8 text-lg font-medium text-pretty text-gray-400 sm:text-xl/8"
+          >
+            Indywidualne zajęcia dopasowane do Twoich potrzeb. Lekcje, które
+            zmieniają obowiązek w przyjemność i dają szybkie efekty. Ucz się w
+            sposób prosty, ciekawy i skuteczny — dokładnie tak, jak lubisz.
+          </p>
+          <div class="mt-10 flex items-center justify-center gap-x-6">
+            <a
+              href="#"
+              class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-400 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500"
+              >Get started</a
+            >
+            <a href="#" class="text-sm/6 font-semibold text-white"
+              >Learn more <span aria-hidden="true">→</span></a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
