Changed buttons text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,10 +59,10 @@ import "../styles/global.css";
             <a
               href="#"
               class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-400 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500"
-              >Get started</a
+              >Umów pierwszą lekcję</a
             >
             <a href="#" class="text-sm/6 font-semibold text-white"
-              >Learn more <span aria-hidden="true">→</span></a
+              >Dowiedz się więcej <span aria-hidden="true">→</span></a
             >
           </div>
         </div>
