--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,5 +68,23 @@ import "../styles/global.css";
         </div>
       </div>
     </div>
+
+    <footer class="flex flex-col items-center gap-2 bg-slate-900 px-6 py-6">
+      <p class="text-sm text-white text-center">
+        © 2025 English with Izabela. Wszelkie prawa zastrzeżone.
+      </p>
+
+      <p class="text-xs text-gray-400">
+        Strona wykonana przez
+        <a
+          href="https://www.linkedin.com/in/norbert-szorc/"
+          target="_blank"
+          rel="noopener"
+          class="hover:text-gray-300 transition"
+        >
+          Norbert Szorc
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
