Added prototype contact and services sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import ContactSection from "../components/ContactSection.astro";
+import ServicesSection from "../components/ServicesSection.astro";
 import "../styles/global.css";
 ---
 
@@ -68,6 +70,10 @@ import "../styles/global.css";
         </div>
       </div>
     </div>
+
+    <ServicesSection />
+
+    <ContactSection />
 
     <footer class="flex flex-col items-center gap-2 bg-slate-900 px-6 py-6">
       <p class="text-sm text-white text-center">
