Added shadcn and accordion to FAQ section

--- a/src/components/FAQSection.astro
+++ b/src/components/FAQSection.astro
@@ -1,205 +1,22 @@
 ---
-
+import { FAQ } from "./FAQList";
 ---
 
 <section class="bg-gray-50 py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-4xl">
       <h2
-        class="text-3xl font-bold leading-10 tracking-tight text-gray-900 sm:text-4xl"
+        class="text-3xl font-bold leading-10 tracking-tight text-slate-900 sm:text-4xl"
       >
         Najczęściej zadawane pytania
-      </h2><p class="mt-6 text-base leading-7 text-gray-600">
+      </h2>
+      <p class="mt-4 text-base leading-7 text-slate-400">
         Masz pytania dotyczące lekcji angielskiego? Znajdź odpowiedzi na
         najczęściej zadawane pytania poniżej.
-      </p><div class="mt-20">
-        <dl class="space-y-6 divide-y divide-gray-900/10">
-          <div class="pt-6">
-            <dt>
-              <button
-                class="flex w-full items-start justify-between text-left text-gray-900"
-                ><span class="text-base font-semibold leading-7"
-                  >Ile kosztują lekcje angielskiego?</span
-                ><span class="ml-6 flex h-7 items-center"
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-chevron-down h-6 w-6 transform transition-transform duration-200"
-                    ><path d="m6 9 6 6 6-6"></path></svg
-                  ></span
-                ></button
-              >
-            </dt>
-          </div><div class="pt-6">
-            <dt>
-              <button
-                class="flex w-full items-start justify-between text-left text-gray-900"
-                ><span class="text-base font-semibold leading-7"
-                  >Jak długo trwa jedna lekcja?</span
-                ><span class="ml-6 flex h-7 items-center"
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-chevron-down h-6 w-6 transform transition-transform duration-200"
-                    ><path d="m6 9 6 6 6-6"></path></svg
-                  ></span
-                ></button
-              >
-            </dt>
-          </div><div class="pt-6">
-            <dt>
-              <button
-                class="flex w-full items-start justify-between text-left text-gray-900"
-                ><span class="text-base font-semibold leading-7"
-                  >Czy prowadzisz lekcje online?</span
-                ><span class="ml-6 flex h-7 items-center"
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-chevron-down h-6 w-6 transform transition-transform duration-200"
-                    ><path d="m6 9 6 6 6-6"></path></svg
-                  ></span
-                ></button
-              >
-            </dt>
-          </div><div class="pt-6">
-            <dt>
-              <button
-                class="flex w-full items-start justify-between text-left text-gray-900"
-                ><span class="text-base font-semibold leading-7"
-                  >Na jakich poziomach uczysz?</span
-                ><span class="ml-6 flex h-7 items-center"
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-chevron-down h-6 w-6 transform transition-transform duration-200"
-                    ><path d="m6 9 6 6 6-6"></path></svg
-                  ></span
-                ></button
-              >
-            </dt>
-          </div><div class="pt-6">
-            <dt>
-              <button
-                class="flex w-full items-start justify-between text-left text-gray-900"
-                ><span class="text-base font-semibold leading-7"
-                  >Jak umówić lekcję próbną?</span
-                ><span class="ml-6 flex h-7 items-center"
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-chevron-down h-6 w-6 transform transition-transform duration-200"
-                    ><path d="m6 9 6 6 6-6"></path></svg
-                  ></span
-                ></button
-              >
-            </dt>
-          </div><div class="pt-6">
-            <dt>
-              <button
-                class="flex w-full items-start justify-between text-left text-gray-900"
-                ><span class="text-base font-semibold leading-7"
-                  >Jakich materiałów używasz podczas lekcji?</span
-                ><span class="ml-6 flex h-7 items-center"
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-chevron-down h-6 w-6 transform transition-transform duration-200"
-                    ><path d="m6 9 6 6 6-6"></path></svg
-                  ></span
-                ></button
-              >
-            </dt>
-          </div><div class="pt-6">
-            <dt>
-              <button
-                class="flex w-full items-start justify-between text-left text-gray-900"
-                ><span class="text-base font-semibold leading-7"
-                  >Czy mogę odwołać lub przełożyć lekcję?</span
-                ><span class="ml-6 flex h-7 items-center"
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-chevron-down h-6 w-6 transform transition-transform duration-200"
-                    ><path d="m6 9 6 6 6-6"></path></svg
-                  ></span
-                ></button
-              >
-            </dt>
-          </div><div class="pt-6">
-            <dt>
-              <button
-                class="flex w-full items-start justify-between text-left text-gray-900"
-                ><span class="text-base font-semibold leading-7"
-                  >Czy pomagasz w przygotowaniu do egzaminów?</span
-                ><span class="ml-6 flex h-7 items-center"
-                  ><svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    class="lucide lucide-chevron-down h-6 w-6 transform transition-transform duration-200"
-                    ><path d="m6 9 6 6 6-6"></path></svg
-                  ></span
-                ></button
-              >
-            </dt>
-          </div>
-        </dl>
+      </p>
+
+      <div class="mt-10">
+        <FAQ client:load />
       </div>
     </div>
   </div>
