--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import "../styles/global.css";
     <AboutMeSection />
     <CTASection />
     <TestimonialsSection />
-    <FAQSection />
+    <FAQSection client:load />
     <ContactSection />
     <Footer />
   </body>
