Working on navbar

--- a/src/components/FAQSection.astro
+++ b/src/components/FAQSection.astro
@@ -2,7 +2,7 @@
 import { FAQ } from "./FAQList";
 ---
 
-<section class="bg-gray-50 py-24 sm:py-32">
+<section id="faq" class="bg-gray-50 py-24 sm:py-32">
   <div class="mx-auto max-w-4xl px-6 lg:px-8">
     <h2
       class="text-3xl font-bold leading-10 tracking-tight text-slate-900 sm:text-4xl"
