--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -3,6 +3,7 @@
 ---
 
 <section
+  id="oferta"
   class="py-20 bg-gradient-to-br from-white via-slate-50/50 to-white relative overflow-hidden"
 >
   <div
