--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,15 @@
 ---
-import AboutMeSection from "../components/AboutMeSection.astro";
-import ContactSection from "../components/ContactSection.astro";
-import CTASection from "../components/CTASection.astro";
-import FAQSection from "../components/FAQSection.astro";
-import HeroSection from "../components/HeroSection.astro";
-import ServicesSection from "../components/ServicesSection.astro";
-import TestimonialsSection from "../components/TestimonialsSection.astro";
-import Footer from "../components/Footer.astro";
+import AboutMeSection from "@/components/AboutMeSection.astro";
+import ContactSection from "@/components/ContactSection.astro";
+import CTASection from "@/components/CTASection.astro";
+import FAQSection from "@/components/FAQSection.astro";
+import HeroSection from "@/components/HeroSection.astro";
+import Navbar from "@/components/Navbar.astro";
+import ServicesSection from "@/components/ServicesSection.astro";
+import TestimonialsSection from "@/components/TestimonialsSection.astro";
+import Footer from "@/components/Footer.astro";
 
-import "../styles/global.css";
+import "@/styles/global.css";
 ---
 
 <html lang="en" class="scroll-smooth">
@@ -21,10 +22,11 @@ import "../styles/global.css";
   </head>
 
   <body>
+    <Navbar />
     <HeroSection />
     <ServicesSection />
     <AboutMeSection />
-    <CTASection />
+    <!-- <CTASection /> -->
     <TestimonialsSection />
     <FAQSection client:load />
     <ContactSection />
