--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,14 +1,14 @@
 ---
-
+import { ChevronDown } from "@lucide/astro";
 ---
 
-<div class="relative isolate px-6 pt-14 lg:px-8">
+<div class="h-fit max-h-svh relative isolate px-6 py-16 lg:px-8 sm:h-svh">
   <div
     class="absolute inset-0 bg-gradient-to-br from-slate-950 via-slate-800 to-red-800 -z-10"
   >
   </div>
   <img
-    src="https://images.unsplash.com/photo-1638153867870-daadae81acb5?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+    src="/hero-bg.jpg"
     alt=""
     class="absolute inset-0 h-full w-full object-cover -z-10 opacity-10"
   />
@@ -24,7 +24,9 @@
     </div>
   </div>
 
-  <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
+  <div
+    class="mx-auto max-w-2xl h-full py-12 sm:flex sm:flex-col sm:justify-center"
+  >
     <div class="hidden sm:mb-8 sm:flex sm:justify-center">
       <p
         class="relative rounded-full px-3 py-1 text-sm/6 text-gray-400 ring-1 ring-white/10 hover:ring-white/20"
@@ -34,27 +36,44 @@
     </div>
     <div class="text-center">
       <h1
-        class="text-5xl font-semibold tracking-tight text-balance text-white sm:text-6xl"
+        class="text-5xl font-semibold tracking-normal text-balance leading-[1.1em] text-white sm:text-6xl"
       >
         English with Izabela
       </h1>
       <p
-        class="mt-8 text-lg font-medium text-pretty text-gray-400 sm:text-xl/8"
+        class="mt-4 text-lg font-medium text-pretty text-gray-400 sm:mt-8 sm:text-xl/8"
       >
         Indywidualne zajęcia dopasowane do Twoich potrzeb. Lekcje, które
         zmieniają obowiązek w przyjemność i dają szybkie efekty. Ucz się w
         sposób prosty, ciekawy i skuteczny — dokładnie tak, jak lubisz.
       </p>
-      <div class="mt-10 flex items-center justify-center gap-x-6">
+
+      <div
+        class="mt-10 flex flex-col gap-4 sm:gap-6 sm:flex-row sm:items-center sm:justify-center"
+      >
         <a
           href="#kontakt"
           class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-400 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500"
           >Umów pierwszą lekcję</a
         >
-        <a href="#" class="text-sm/6 font-semibold text-white"
+
+        <a
+          href="#oferta"
+          class="rounded-md bg-white/5 ring-1 ring-white/15 backdrop-blur-xs px-3.5 py-2.5 text-sm font-semibold text-white sm:hidden"
+          >Dowiedz się więcej <span aria-hidden="true">→</span></a
+        >
+        <a
+          href="#oferta"
+          class="hidden text-sm font-semibold text-white sm:block"
           >Dowiedz się więcej <span aria-hidden="true">→</span></a
         >
       </div>
     </div>
+  </div>
+
+  <div class="absolute bottom-6 left-1/2 -translate-x-1/2">
+    <a href="#oferta" aria-label="Przewiń w dół">
+      <ChevronDown class="w-8 h-8 text-white animate-bounce" />
+    </a>
   </div>
 </div>
