--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import ContactSection from "@/components/ContactSection.astro";
 import CTASection from "@/components/CTASection.astro";
 import FAQSection from "@/components/FAQSection.astro";
 import HeroSection from "@/components/HeroSection.astro";
-import Navbar from "@/components/Navbar.astro";
+import { Navbar } from "@/components/Navbar";
 import ServicesSection from "@/components/ServicesSection.astro";
 import TestimonialsSection from "@/components/TestimonialsSection.astro";
 import Footer from "@/components/Footer.astro";
@@ -26,7 +26,7 @@ import "@/styles/global.css";
   </head>
 
   <body>
-    <Navbar />
+    <Navbar client:load />
     <HeroSection />
     <ServicesSection />
     <AboutMeSection />
