--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { Toaster } from "@/components/ui/Sonner";
 import AboutMeSection from "@/components/AboutMeSection.astro";
 import ContactSection from "@/components/ContactSection.astro";
 import CTASection from "@/components/CTASection.astro";
@@ -22,6 +23,7 @@ import "@/styles/global.css";
 
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+
     <title>English with Izabela</title>
   </head>
 
@@ -35,5 +37,7 @@ import "@/styles/global.css";
     <FAQSection client:load />
     <ContactSection />
     <Footer />
+
+    <Toaster client:load />
   </body>
 </html>
