Updated meta tags

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,14 +16,23 @@ import "@/styles/global.css";
   <head>
     <meta charset="utf-8" />
 
+    <title>English with Izabela | Korepetycje angielski</title>
+    <meta
+      name="description"
+      content="Korepetycje i zajęcia z języka angielskiego w Białymstoku i w okolicach oraz online. Przygotowanie do egzaminów ósmoklasisty, matury, czy innych testów językowych. Konwersacje i gramatyka, ucz się skutecznie z Izabelą, doświadczoną nauczycielką po studiach w UK."
+    />
+    <meta
+      name="keywords"
+      content="korepetycje angielski Białystok, korepetycje angielski online, lekcje angielskiego Białystok, lekcje angielskiego online, nauka angielskiego online, angielski Białystok, przygotowanie do matury angielski, przygotowanie do egzaminów angielski, konwersacje angielski, native speaker angielski, wymowa angielski, akcent angielski"
+    />
+    <meta name="author" content="Izabela Śliż" />
+
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
 
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-
-    <title>English with Izabela</title>
   </head>
 
   <body>
